--- a/sh/architecture/patterns/behavioral/behavioral.html
+++ b/sh/architecture/patterns/behavioral/behavioral.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavioral</title>
-    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
     <b>Chain of Responsibility:</b> позволяет создавать цепочки объектов, которые могут обрабатывать запросы поочередно, пока один из них не обработает запрос.<br>
-    &nbsp 1. Filters, Interseptors<br>
-    &nbsp 2. BeanPostProcessors<br>
+    <div class="tab">
+        1. Filters, Interseptors<br>
+        2. BeanPostProcessors<br>
+    </div>
     <br>
     <b>Command:</b> инкапсулирует запросы или операции как объекты, что позволяет откладывать выполнение команд, сохранять их историю, отменять или повторять.<br><br>
     <b>Interpreter:</b> определяет грамматику языка и интерпретирует предложения на этом языке.<br><br>
