--- a/sh/architecture/patterns/structural/structural.html
+++ b/sh/architecture/patterns/structural/structural.html
@@ -4,32 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Structural</title>
-    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
     <b><a href=adapter.html>Adapter</a></b> для преобразования к определённому интерфейсу.<br><br>
     <b>Bridge</b> разделяет абстракцию от ее реализации, так что они могут изменяться независимо друг от друга.<br><br>
     <b>Composite</b> позволяет обрабатывать группы объектов так, как будто это единичный объект.<br>
-    &nbsp 1. Java: Древовидные структуры данных<br>
-    &nbsp 2. Spring: Иерархия бинов<br>
-    &nbsp 3. Hibernate: Иерархия объектов в БД<br>
-    &nbsp 4. Графический интерфейс Java (AWT и Swing): Иерархия компонентов<br>
+    <div class="tab">
+        1. Java: Древовидные структуры данных<br>
+        2. Spring: Иерархия бинов<br>
+        3. Hibernate: Иерархия объектов в БД<br>
+        4. Графический интерфейс Java (AWT и Swing): Иерархия компонентов<br>
+    </div>
     <br>
     <b><a href=decorator.html>Decorator</a></b> динамически добавляет новые обязанности объекту.<br>
-    &nbsp 1. Java I/O Streams: BufferedInputStream может быть обернут в DataInputStream<br>
+    <div class="tab">
+        1. Java I/O Streams: BufferedInputStream может быть обернут в DataInputStream<br>
+    </div>
     <br>
     <b>Facade</b> предоставляет простой интерфейс для сложной системы классов, библиотек и других объектов.<br>
-    &nbsp 1. Java утилиты: java.util.Calendar, java.net.URL<br>
-    &nbsp 2. Spring JdbcTemplate<br>
-    &nbsp 3. Hibernate Session<br>
+    <div class="tab">
+        1. Java утилиты: java.util.Calendar, java.net.URL<br>
+        2. Spring JdbcTemplate<br>
+        3. Hibernate Session<br>
+    </div>
     <br>
     <b>Flyweight</b> позволяет эффективно использовать большое количество мелких объектов, используя разделяемые объекты.<br>
-    &nbsp 1. String pool и другие пулы. Для повторного использования объектов<br>
-    &nbsp 2. Hibernate кэш ???<br>
+    <div class="tab">
+        1. String pool и другие пулы. Для повторного использования объектов<br>
+        2. Hibernate кэш ???<br>
+    </div>
     <br>
     <b><a href=proxy.html>Proxy</a></b> контролирует доступ к объекту, добавляя дополнительную логику к его операциям.<br>
-    &nbsp 1. Hibernate ленивая загрузка<br>
-    &nbsp 2. @Transactional<br>
-    &nbsp 3. AOP для добавления advices
+    <div class="tab">
+        1. Hibernate ленивая загрузка<br>
+        2. @Transactional<br>
+        3. AOP для добавления advices
+    </div>
 </body>
 </html>
