--- a/sh/index.html
+++ b/sh/index.html
@@ -32,8 +32,7 @@
 			<a href=multi_threading.html>Многопоточность</a><br>
 			<a href=docker.html>Docker</a><br>
 			<a href=kafka.html>Kafka</a><br>
-			<a href=microservices.html>Микросервисы</a><br>
-			<a href=patterns/patterns.html>Шаблоны проектирования</a><br>
+			<a href=architecture/architecture.html>Архитектура</a><br>
 			<a href=https://metanit.com/java/tutorial>Метанит JAVA</a><br>
 			<a href=https://chat.openai.com/>GPT-chat</a><br>
 		</b>
