--- a/sh/transaction_isolation.html
+++ b/sh/transaction_isolation.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Степени изоляции решают проблемы, связанные с параллельным доступом к данным и обеспечением их целостности.<br><br>
+    <h1>Степени изоляции транзакций</h1>
+    Решают проблемы, связанные с параллельным доступом к данным и обеспечением их целостности.<br><br>
 
     Пр <b>Phantom Read</b> Транзакция при повторном чтении видит новую строку, которую вставила другая транзакция.<br>
     Реш <b><u>Serializable</u></b><br><br>
