--- a/sh/architecture/patterns/patterns.html
+++ b/sh/architecture/patterns/patterns.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patterns</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
     <div style='text-align:center; width:100%'>
+    <b>
         <a href=creational/creational.html>Creational</a><br>
         <a href=behavioral/behavioral.html>Behavioral</a><br>
         <a href=structural/structural.html>Structural</a><br>
+    </b>
     </div>
 </body>
 </html>
