ddd in progress

--- a/sh/architecture/ddd.html
+++ b/sh/architecture/ddd.html
@@ -10,22 +10,48 @@
     <h1>Основные принципы:</h1>
     <div class="tab">
         <b>Bounded contexts</b> Разграничение контекста - разделение домена на поддомены. Решение определённой подЗадачи. Содержит свою не пересекающуюся с другими Domain Model<br>
+        <div>
+            <img src="../pictures/bounded_context.jpg" alt="Bounded contexts" width="650px">
+        </div>
+        <br>
         <b>Ubiquitous language</b> (юбиквитас) Единый язык для бизнеса и програмиста. DSL Domain Specific Language - Единый язык доведённый до абсолюта, его можно скомпилировать<br>
-        <b>Фокус на доменной модели</b>
+        <br>
+        <b>Domain model</b><br>
+        <div class="tab">
+            <b>Anemic (Анемичная):</b> Содержит данные, не содержит логики. Логика в сервисе <br>
+            <b>Rich (Богатая):</b> Содержит и данные и <b>логику бизнес правил.</b> Не только <b>состояние</b>, но и <b>поведение</b>. Контролирует <b>консистентность данных</b>, что-бы все инварианты (условия) были соблюдены<br>
+            <br>
+            <b>Entity</b> (сущность) Фундаментальный элемент при построении контекста. Имеет жизненный цикл.<br>
+            <b>Value Object (immutable!): </b> Строительные блоки доменной модели. Позволяют сделать строгую типизацию. Логику надо спускать в них <br>
+            <b>Aggregate</b><br>
+            <div>
+                <img src="../pictures/anem-rich.jpg" alt="Anemic - rich" width="500px">
+            </div>
+        </div>
     </div>
     <br>
-
-    Богатая и анемичная доменная модель<br>
-
-    инвариант - условие которое истинно на протяжении жизни доменной модели<br>
-
-    <h1>Домен - предметная область</h1>
+    <div>
+        <img src="../pictures/domain_model_isolation.jpg" alt="Domain Model Isolation" width="650px">
+    </div>
+    <br>
+    <b>Свойства DDD архитектуры</b>
     <div class="tab">
-        <b>Entity</b> (сущность) Фундаментальный элемент при построении контекста. Имеет жизненный цикл.<br>
-        <b>Value Object</b> (immutable)<br>
-        <b>Aggregate</b><br>
+        <b>Разделение ответственности:</b> модель ответственна за доменные знания. За все внешние связи отвечает Application Sevice <br>
+        <b>One way flow of dependencies:</b> Сервисы знают про модель, Модель НЕ знает про сервисы <br>
     </div>
 
+    <b>Service</b> занимается:
+    <div class="tab">
+        <b>Координация операций</b> между различными предметными областями <br>
+        <b>Сложная бизнес-логика</b> на основе данных из разных предметных областей <br>
+        <b>Взаимодействие с внешними системами</b> DB, уведомления, обращение к веб сервисам <br>
+        <b>Системные операции</b> аутентификация, авторизация или управление транзакциями <br>
+        <b>Переиспользуемые операции</b> в различных контекстах <br>
+    </div>
+    <br>
+    <div>
+        <img src="../pictures/ddd_trilema.jpg" alt="DDD trilema" width="700px">
+    </div>
 
 
 
@@ -37,7 +63,6 @@
 
 
 
-    ООП Инкапсуляция - Поддержка консистентности данных
 
 
     POD
