--- a/sh/security/tls_ssl.html
+++ b/sh/security/tls_ssl.html
@@ -14,7 +14,7 @@
     Ассиметричное для обмена ключами.<br>
     Симетричное для данных.<br>
     <div class="tab">
-        <b>1. RSA</b> Уязвимый, не обеспечивает совкершенную прямую секретность (Perfect forward security)<br>
+        <b>1. RSA</b> Уязвимый, не обеспечивает совершенную прямую секретность (Perfect forward security)<br>
             <div class="tab">
             <b>Клиент</b> hello --&gt <b>Сервер</b><br>
             &lt-- Открытый ключ<br>
