--- a/sh/architecture/ddd.html
+++ b/sh/architecture/ddd.html
@@ -19,11 +19,13 @@
         <b>Domain model</b><br>
         <div class="tab">
             <b>Anemic (Анемичная):</b> Содержит данные, не содержит логики. Логика в сервисе <br>
-            <b>Rich (Богатая):</b> Содержит и данные и <b>логику бизнес правил.</b> Не только <b>состояние</b>, но и <b>поведение</b>. Контролирует <b>консистентность данных</b>, что-бы все инварианты (условия) были соблюдены<br>
+            <b>Rich (Богатая):</b> Содержит и данные и <b>логику бизнес правил.</b> Не только <b>состояние</b>, но и <b>поведение</b>. Контролирует 
+            <b>консистентность данных <u>(Инкапсуляция!)</u></b>, что-бы все <b>инварианты</b> (условия) были соблюдены <br>
             <br>
-            <b>Entity</b> (сущность) Фундаментальный элемент при построении контекста. Имеет жизненный цикл.<br>
+            <b>Entity</b> (сущность) Фундаментальный элемент при построении контекста. Имеет <b>Id</b> и <b>жизненный цикл</b>.<br>
             <b>Value Object (immutable!): </b> Строительные блоки доменной модели. Позволяют сделать строгую типизацию. Логику надо спускать в них <br>
-            <b>Aggregate</b><br>
+            <b>Aggregate</b> Собирательная сущность, единое целое имеет <b>Id</b>. Состоит из VO и Entity. Является границей транзакции. 
+            Другие элементы домена не могут ссылаться на внутрености агрегата. Entity может находиться только в одном агрегате. <b>Repository для агрегата (не для Entity)</b> <br>
             <div>
                 <img src="../pictures/anem-rich.jpg" alt="Anemic - rich" width="500px">
             </div>
@@ -49,21 +51,18 @@
         <b>Переиспользуемые операции</b> в различных контекстах <br>
     </div>
     <br>
+    <b>Внешние слои зависят от внутренних, но не наоборот!</b>
+    <div>
+        <img src="../pictures/ddd_onion.jpg" alt="DDD onion" width="500px">
+    </div>
+    <br>
     <div>
         <img src="../pictures/ddd_trilema.jpg" alt="DDD trilema" width="700px">
     </div>
-
-
-
-    Уровни
-    1. Interface
-    2. Application
-    3. Business
-    4. Infrastructure<br>
-
-
-
-
+    <br>
+    Метод либо выполняет работу, либо кидает Exception <br>
+    <b>DTO (Data Transfer Object):</b> объект для передачи данных между слоёв. Не содержит логики <br>
+    <br>
 
     POD
     Разграничивал контексты
