--- a/sh/architecture/architecture.html
+++ b/sh/architecture/architecture.html
@@ -12,7 +12,36 @@
 			<a href=microservices.html>Микросервисы</a><br>
 			<a href=patterns/patterns.html>Шаблоны проектирования</a><br>
             <a href=ddd.html>DDD (Domain Driven Design)</a><br>
+			<a href=clean_arc.html>Clean Architecture</a><br>
 		</b>
 	</div>
+	<br>
+	<h1>Требования к архитектуре</h1>
+	<div class="tab">
+		<b>Масштабируемость (Scalability)</b><br>
+		<b>Отказоустойчивость (Resilience)</b><br>
+		<b>Гибкость (Flexibility):</b> возможность легко вносить изменения без воздействия на другие части<br>
+		<b>Тестируемость (Testability)</b><br>
+		<b>Эффективность (Efficiency):</b> производительность и оптимальное использование ресурсов <br>
+		<b>Безопасность (Security)</b><br>
+		<b>Обслуживаемость (Maintainability)</b><br>
+		<b>Понятность (Clearness)</b><br>
+		<b>Согласованность (Consistency)</b><br>
+		<b>Модульность:</b> Каждый модуль отвечает за конкретную функциональность. Независимые, легко заменяемые <br>
+		<b>Проектирование с учетом потребностей пользователей (User-Centric Design)</b><br>
+		<b>Соблюдение принципов проектирования (Design Principles)</b>
+	</div>
+	<br>
+	<h1>CODE SMELLS:</h1>
+    <div class="tab">
+        Дублированный код<br>
+        Мёртвый код<br>
+        Длинные методы 10 строк, 1 экран(30 строк) <br>
+        Длинный список параметров > 3<br>
+        Комментарии<br>
+        Ненужные примитивные переменные - ?<br>
+        Сгустки данных
+    </div>
+    <br>
 </body>
 </html>
