--- a/sh/architecture/ddd.html
+++ b/sh/architecture/ddd.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+    <h1>DDD это набор Рекомендаций</h1>
     <h1>Основные принципы:</h1>
     <div class="tab">
         <b>Bounded contexts</b> Разграничение контекста - разделение домена на поддомены. Решение определённой подЗадачи. Содержит свою не пересекающуюся с другими Domain Model<br>
