--- a/sh/common.html
+++ b/sh/common.html
@@ -17,8 +17,8 @@
     <b>При переопределении (override) методов:</b><br>
     <div class="tab">
         1. Типы параметров: == такие же<br>
-        2. Возвращаемый тип: &lt= такой же, или подтип (ковариантный возвращаемый тип).<br>
-        3. Уровень доступа: &gt= такой же, или шире.<br>
+        2. Уровень доступа: &gt= такой же, или шире.<br>
+        3. Возвращаемый тип: &lt= такой же, или подтип (ковариантный возвращаемый тип).<br>
         4. Исключение: &lt= такое же, или уже.<br>
     </div>
     <br>
@@ -31,20 +31,15 @@
         }
     }</pre>
     <br>
-    <h1>CODE SMELLS:</h1>
-    <div class="tab">
-        Дублированный код<br>
-        Мёртвый код<br>
-        Длинные методы 10 строк, 1 экран(30 строк) <br>
-        Длинный список параметров > 3<br>
-        Комментарии<br>
-        Ненужные примитивные переменные - ?<br>
-        Сгустки данных
-    </div>
-    <br>
 
     <h1>WebSocket</h1>
     Протокол, который позволяет установить двунаправленное соединение с сервером, посылать и принимать сообщения и держать соединение открытым<br>
-
+    <br>
+    <h1>Задать структуры данных</h1>
+    <div class="tab">
+        <b>List:</b> List&ltInteger&gt list = List.of(1, 2, 3); // НЕИЗМЕНЯЕМЫЙ ImmutableCollections$ListN <br>
+        <b>Array: </b> int[] array = {1, 2, 3, 4, 5};
+    </div>
+    <br>
 </body>
 </html>
