--- a/sh/architecture/architecture.html
+++ b/sh/architecture/architecture.html
@@ -13,6 +13,7 @@
 			<a href=patterns/patterns.html>Шаблоны проектирования</a><br>
             <a href=ddd.html>DDD (Domain Driven Design)</a><br>
 			<a href=clean_arc.html>Clean Architecture</a><br>
+			<a href=hexagonal_arc.html>Hexagonal Architecture</a><br>
 		</b>
 	</div>
 	<br>
