--- a/sh/architecture/ddd.html
+++ b/sh/architecture/ddd.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>DDD это набор Рекомендаций</h1>
+    <b>The structure and language of the code should match that of the business domain</b>
     <h1>Основные принципы:</h1>
     <div class="tab">
         <b>Bounded contexts</b> Разграничение контекста - разделение домена на поддомены. Решение определённой подЗадачи. Содержит свою не пересекающуюся с другими Domain Model<br>
+        <b>A part of the software where particular terms, rules and definitions apply consistently</b>
+        <br>
         <div>
             <img src="../pictures/bounded_context.jpg" alt="Bounded contexts" width="650px">
         </div>
